argonaut-configs/_onetimesetup/argocd/argocd-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: argocd-gateway
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
    # - port:
    #     number: 80
    #     name: http-argocd
    #     protocol: HTTP
    #   hosts:
    #     - "*"
    #   tls:
    #     httpsRedirect: true
    - port:
        number: 443
        name: https-argocd
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: ingress-for-istio # must be the same as secret
      hosts:
        - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-server
spec:
  hosts:
    - "*"
  gateways:
    - argocd-gateway
  tls:
    - match:
        - port: 443
          sniHosts:
            - "*"
      route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
